# PinNote

./: .env.example  .gitignore  AGENTS.md  DESKTOP.md  next.config.ts  package.json
.github/workflows/: release.yml
scripts/: cleanup-demo.ts  start-for-tauri.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/ocr/: route.ts
src/app/card-options/: page.tsx
src/components/pinnote/: BottomDrawer.tsx  CardBoxPanel.tsx  ContextMenu.tsx  DeleteConfirmDialog.tsx  DrawToolbar.tsx  DrawingCanvas.tsx  FloatingImageCard.tsx  FloatingTextCard.tsx  QuickTextInput.tsx  ScreenshotOverlay.tsx  SettingsPanel.tsx  TooltipBanner.tsx
src/components/user-profile/: user-sync-effect.tsx
src/hooks/: useDrawCanvas.ts
src/lib/: shortcuts.ts
src/lib/mcp/: server.ts
src/lib/mcp/tools/: pinnote-tools.ts
src/types/: cards.ts
src/utils/: cardUtils.ts
