[package]
name = "pinnote"
version = "0.1.0"
description = "PinNote — pin floating reference cards over any window"
authors = ["you"]
edition = "2021"

[lib]
name = "pinnote_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pinnote"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
